Patterns: Fix more alignment issues in old iPad landscape mode

--- a/resources/gato-component-patterns/css/textimage.scss
+++ b/resources/gato-component-patterns/css/textimage.scss
@@ -65,6 +65,7 @@
         //}
         img {
           border-radius: 2px;
+          min-height: unset;
         }
         @media (max-width:$mn-breakpoint) {
           float: none;
